fix form alignment issue

--- a/app/styles/view-specific/home/blocks/_form.scss
+++ b/app/styles/view-specific/home/blocks/_form.scss
@@ -2,7 +2,7 @@
   margin-bottom:0.8%;
   @media (min-width:767px) {
     width:68%;
-    margin:0 0 0 33.25%;
+    margin:0 0 0 33%;
   }
 
   .help-block,
